configuration/kubectl/manifest/network-policy/8-allow-port-range.yaml
# NAMESPACE pods will only receive traffic from NAMESPACE_2 pods in 1-1000 ports
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: NP-MULTI-SELECTOR-INTERSECTION
  namespace: NAMESPACE
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: NAMESPACE_2
          ports:
            - protocol: TCP
              port: 1
              endPort: 1000
